# otus_matrix

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  classes.html  classotus_1_1Matrix-members.html  classotus_1_1Matrix.html  classotus_1_1Matrix_1_1Iterator-members.html  classotus_1_1Matrix_1_1Iterator.html  classotus_1_1Matrix_1_1Layout_3_010_00_01Types_8_8_8_4-members.html  classotus_1_1Matrix_1_1Layout_3_010_00_01Types_8_8_8_4.html  classotus_1_1Matrix_1_1TupleHash-members.html  classotus_1_1Matrix_1_1TupleHash.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_ee463c8c6b30473980647127088d4b9a.html  dir_ee463c8c6b30473980647127088d4b9a_dep.map  dir_ee463c8c6b30473980647127088d4b9a_dep.md5  files.html  functions.html  functions_func.html  functions_type.html  graph_legend.html  index.html  matrix_8hpp.html  matrix_8hpp__incl.map  matrix_8hpp__incl.md5  matrix_8hpp_source.html  namespaceotus.html  namespaces.html
include/otus/: matrix.hpp
search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  search.js  typedefs_0.js
tests/: CMakeLists.txt  ConstMatrix.test.cpp  Main.test.cpp  Matrix.test.cpp  Matrix1D.test.cpp  Matrix3D.test.cpp
